Add docker configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost/cotacao_db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
