--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,15 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.7.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/><!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>br.com.martins.valdelar</groupId>
 	<artifactId>dolar-comercial-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dolar-comercial-api</name>
 	<description>API de consulta ao dólar comercial</description>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
