Chama a API para recuperar a cotacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
+
+url.servico.cotacao=https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata/CotacaoDolarDia(dataCotacao=@dataCotacao)?@dataCotacao='%s'&$top=1&$format=json&$select=cotacaoCompra,cotacaoVenda,dataHoraCotacao
