--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost/cotacao_db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=cotacaodb
+
+#logging
+logging.level.org.springframework.data=debug
+logging.level.=error
 
 url.servico.cotacao=https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata/CotacaoDolarDia(dataCotacao=@dataCotacao)?@dataCotacao='%s'&$top=1&$format=json&$select=cotacaoCompra,cotacaoVenda,dataHoraCotacao
